--- a/css/styles.css
+++ b/css/styles.css
@@ -527,6 +527,7 @@ border: 1px solid var(--accent-color);
     border-radius: 4px;
     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
@@ -577,11 +578,12 @@ overflow: hidden;
     top: 0;
     left: 0;
     padding: 63px 24px;
-    transform: translatey(101%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.img-thumb:hover .overlay {
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
 transform: translatey(0);
     
 }
@@ -703,7 +705,6 @@ align-items: baseline;
 
 .footer-social:hover,
 .footer-social:focus {
-    color: var(--back-color);
     background-color: var(--accent-color);
 }
 
